[gd_scene load_steps=7 format=2]

[ext_resource path="res://Unit/Dank Druid/SkillTree/BG.png" type="Texture" id=1]
[ext_resource path="res://Unit/SkillTreeBase.gd" type="Script" id=2]
[ext_resource path="res://Unit/Regress.png" type="Texture" id=3]
[ext_resource path="res://Party/Assets/FoodIcon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/CommandFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Unit/LevellingCard.tscn" type="PackedScene" id=6]

[node name="Background" type="Sprite"]

pause_mode = 2
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Pause" ]

[node name="Regress" type="TextureButton" parent="." index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1818.0
margin_top = 47.0
margin_right = 1868.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
_sections_unfolded = [ "Pause", "Textures" ]

[node name="SkillPoints" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 482.0
margin_top = 940.0
margin_right = 499.0
margin_bottom = 976.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="LevelCard" parent="." index="2" instance=ExtResource( 6 )]

[node name="InfoAnchor" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 500.0
margin_right = 60.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[connection signal="tree_entered" from="." to="." method="_on_Background_tree_entered"]

[connection signal="pressed" from="Regress" to="." method="_on_Regress_pressed"]


